style: fix itallic h2 and align center h3

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,9 @@ h3{
     height: 10% !important;
     margin-bottom: 40px;
 }
+.NomesEmAscencao{
+    font-size: 30px;
+}
 .Artistas{
     display: flex;
     flex-wrap: wrap;
